# git-graphz

./: .gitignore  README.md  annotated.html  classes.html  classgitgraphz_1_1gitgraphz_1_1Gitgraphz-members.html  classgitgraphz_1_1gitgraphz_1_1Gitgraphz.html  current_tree.html  dir_3da9372e430509f3df060de03de079e9.html  dir_3da9372e430509f3df060de03de079e9_dep.map  dir_3da9372e430509f3df060de03de079e9_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_9cba3ccb450b89ac6f0c2a18abcbadf0.html  functions.html  functions_func.html  git-graph  graph_legend.html  index.html  namespacegitgraphz.html  namespacegitgraphz_1_1gitgraphz.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  pyproject.toml
.github/workflows/: doxygen.yaml
docs/: Doxyfile  build_doc.sh
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  classes_0.js  functions_1.js  functions_2.js  namespaces_0.js  pages_0.js  searchdata.js
src/gitgraphz/: __init__.py  gitgraphz.py
